<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ChangeFavBook">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite_book"
            android:textSize="36sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="24sp"
            android:text="@string/title"/>

        <EditText
            android:id="@+id/titleSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:hint="@string/enter_the_book_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="24sp"
            android:text="@string/author"/>

        <EditText
            android:id="@+id/authorSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:hint="@string/enter_the_book_author"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="24sp"
            android:text="@string/year"/>

        <EditText
            android:id="@+id/yearSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:hint="@string/enter_the_book_year"
            android:inputType="numberDecimal"/>

        <Button
            android:id="@+id/changeBookButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:text="@string/change"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:paddingBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/book" />

</androidx.constraintlayout.widget.ConstraintLayout>