<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".FavoriteBook">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:gravity="center"
            android:text="@string/favorite_book"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/title_of_the_book"/>
        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:gravity="center"
            android:text="@string/author_of_the_book"/>
        <TextView
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:gravity="center"
            android:text="@string/year_of_the_book"/>
        <Button
            android:id="@+id/change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:textSize="21sp"
            android:text="@string/change"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:paddingBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/book" />

</androidx.constraintlayout.widget.ConstraintLayout>