<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Author">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:gravity="center"
            android:text="@string/pam"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:gravity="center"
            android:text="@string/lukasz"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColor="@color/white"
            android:textSize="32sp"
            android:gravity="center"
            android:text="@string/ponachajba"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>