<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingTop="100dp"
        android:layout_margin="10dp"
        tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/addBookButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_book"/>

            <Button
                android:id="@+id/favoriteBookButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favorite_book_btn" />

            <Button
                android:id="@+id/authorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author_btn"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:paddingBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/book" />

</androidx.constraintlayout.widget.ConstraintLayout>